[package]
name = "erco-fltk-examples"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fl_text_display"
path = "src/fl_text_display.rs"

[[bin]]
name = "fl_text_display_colors"
path = "src/fl_text_display_colors.rs"

[dependencies]
fltk = "1.0.20"
