[package]
name = "erco-fltk-examples"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fl_text_display"
path = "src/fl_text_display.rs"

[[bin]]
name = "fl_text_display_colors"
path = "src/fl_text_display_colors.rs"

[[bin]]
name = "fl_right_click_context_menu"
path = "src/fl_right_click_context_menu.rs"

[[bin]]
name = "fl_jpeg_image"
path = "src/fl_jpeg_image.rs"

[[bin]]
name = "fl_raw_rgb_image"
path = "src/fl_raw_rgb_image.rs"

[[bin]]
name = "fl_change_menu_item"
path = "src/fl_change_menu_item.rs"

[[bin]]
name = "fl_chart"
path = "src/fl_chart.rs"

[[bin]]
name = "fl_toggling_menu"
path = "src/fl_toggling_menu.rs"

[[bin]]
name = "fl_file_browser"
path = "src/fl_file_browser.rs"

[dependencies]
fltk = { version = "1.2.31", features = ["fltk-bundled"] }
